--- a/promohub-teste/src/App.css
+++ b/promohub-teste/src/App.css
@@ -2,33 +2,27 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-body{
+body {
   background-color: rgb(70, 88, 157);
   color: black;
 }
 
-.App{
+.App {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
-.card-body{
-  height: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  padding: 1.25rem;
+  row-gap: 0.25rem;
 }
 
 .logo {
-  margin: 30px;
-  width: 130px;
+  display: block;
+  width: 8rem;
+  height: auto;
+  max-width: 100%;
 }
