--- a/promohub-teste/src/components/FetchData.css
+++ b/promohub-teste/src/components/FetchData.css
@@ -15,6 +15,14 @@
   row-gap: 0.5rem;
   border-radius: 1.5rem;
   width: 320px;
+  transition: 0.15s;
+  cursor: pointer;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
+}
+
+#card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 640px) {
@@ -39,6 +47,7 @@
 }
 
 .card-header {
+  margin: 0;
   background-color: #fff;
   padding: 0;
   border: 0px;
@@ -49,6 +58,7 @@
 }
 
 .card-body {
+  margin: 0;
   flex: 0;
   font-weight: 300;
   font-size: 1.125rem;
@@ -65,6 +75,7 @@
 #dcp-2 {
   font-weight: 700;
   color: #003b7b;
+  font-size: 1.25rem;
 }
 
 #button {
@@ -77,6 +88,7 @@
   background-color: #24b45d;
   border: none;
   cursor: pointer;
+  transition: 0.15s;
 }
 
 #button:hover {
@@ -95,6 +107,7 @@
 }
 
 #created-at {
+  font-weight: 300;
   font-size: 0.75rem;
   line-height: 1rem;
   margin-top: 0.75rem;
