--- a/promohub-teste/src/components/FetchData.css
+++ b/promohub-teste/src/components/FetchData.css
@@ -25,12 +25,6 @@
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.2);
 }
 
-@media (max-width: 640px) {
-  #card {
-    width: 100%;
-  }
-}
-
 #card-img-container {
   display: flex;
   justify-content: center;
@@ -44,6 +38,7 @@
   height: auto;
   max-width: 100%;
   width: auto;
+  border-radius: 1.5rem;
 }
 
 .card-header {
@@ -115,4 +110,17 @@
   align-items: center;
   justify-content: right;
   column-gap: 0.5rem;
+}
+
+/* Media querys */
+
+@media (max-width: 640px) {
+  #card {
+    width: 100%;
+  }
+
+  .row {
+    padding: 0.5rem;
+    gap: 1.75rem;
+  }
 }
